Fix about section overlap on small screens (set height to auto)

--- a/web/static/styles/queries.css
+++ b/web/static/styles/queries.css
@@ -37,7 +37,6 @@
     opacity: 0;
     transition: max-height 0.4s ease, opacity 0.3s ease;
   }
-
   .navigation ul.active {
     max-height: 100vh;
     opacity: 1;
@@ -80,7 +79,7 @@
     flex-direction: column;
   }
   .about-herosection{
-    height: 75vh;
+    height: auto;
   }
 }
 
